--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>net.herospvp.combo</groupId>
+    <groupId>net.herospvp</groupId>
     <artifactId>heros-combo-ffa</artifactId>
-    <version>2.2.1-SNAPSHOT</version>
+    <version>2.2.2-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>ComboFFA</name>
@@ -58,6 +58,10 @@
             <id>spigot-repo</id>
             <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
         </repository>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -71,6 +75,18 @@
             <artifactId>spigot-api</artifactId>
             <version>1.8.8-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.HerosDevs</groupId>
+            <artifactId>heros-core</artifactId>
+            <version>1.1.21-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>net.herospvp</groupId>
+            <artifactId>heros-base-ffa</artifactId>
+            <version>2.3.4-SNAPSHOT</version>
+            <systemPath>${basedir}/libs/heros-base-ffa.jar</systemPath>
+            <scope>system</scope>
         </dependency>
     </dependencies>
 </project>
