--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,10 @@
 
     <groupId>net.herospvp</groupId>
     <artifactId>heros-combo-ffa</artifactId>
-    <version>2.2.2-SNAPSHOT</version>
+    <version>2.2.3-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>ComboFFA</name>
+    <name>heros-combo-ffa</name>
 
     <properties>
         <java.version>1.8</java.version>
